feat(): Add text view in login view

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,10 +13,18 @@
         android:layout_gravity="center_horizontal"
         android:indeterminate="true"/>
     <TextView
+        android:id="@+id/login_fragment_text_loading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/login_fragment_text_loading_data"/>
+    <TextView
+        android:id="@+id/login_fragment_text_google_sign_in"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/login_fragment_text_google_sign_in"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/login_fragment_empty_list"
@@ -30,7 +38,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/login_fragment_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_10"/>
 
     <TextView
         android:id="@+id/login_fragment_register"
