feat(): apply a style on text

--- a/app/src/main/res/layout/login_item_channel.xml
+++ b/app/src/main/res/layout/login_item_channel.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="production"
-            android:textStyle="italic"
+            android:textStyle="italic|bold"
             android:gravity="center"/>
     </LinearLayout>
 
