feat(): add some strings to manage notif and modify channel id

--- a/app/src/main/res/values-fr/string.xml
+++ b/app/src/main/res/values-fr/string.xml
@@ -6,7 +6,7 @@
     <string name="my_default_web_client_id">791157279130-cg8vmf3alqpme3lg47sq7o0m9ehaf9cb.apps.googleusercontent.com</string>
 
     <!-- FCM channel id -->
-    <string name="notification_channel_id">yoctu_notification</string>
+    <string name="notification_channel_id">com.yoctu_notification</string>
 
 
     <!-- dialog connectivity -->
@@ -24,5 +24,12 @@
     <string name="login_fragment_there_are_not_chosen">Vous devez choisir au moins un toppic</string>
     <string name="login_fragment_text_loading_data">Chargement des données à partir du server...</string>
     <string name="login_fragment_text_google_sign_in">Connexion à Google</string>
+
+    <!-- notification -->
+    <string name="notif_fragment_text_loading">Chargement des messages...</string>
+    <string name="notif_fragment_title_view">Notifications</string>
+    <!-- notification item -->
+    <string name="notif_item_title">Titre :</string>
+    <string name="notif_item_text">Texte :</string>
 
 </resources>
