--- a/app/src/main/res/values-en/string.xml
+++ b/app/src/main/res/values-en/string.xml
@@ -6,7 +6,7 @@
     <string name="my_default_web_client_id">791157279130-cg8vmf3alqpme3lg47sq7o0m9ehaf9cb.apps.googleusercontent.com</string>
 
     <!-- FCM channel id -->
-    <string name="notification_channel_id">yoctu_notification</string>
+    <string name="notification_channel_id">com.yoctu_notification</string>
 
 
     <!-- dialog connectivity -->
@@ -24,5 +24,12 @@
     <string name="login_fragment_there_are_not_chosen">You have to choose a channel</string>
     <string name="login_fragment_text_loading_data">Loading data from server...</string>
     <string name="login_fragment_text_google_sign_in">Sign in with Google</string>
+
+    <!-- notification -->
+    <string name="notif_fragment_text_loading">Loading messages...</string>
+    <string name="notif_fragment_title_view">Notifications</string>
+    <!-- notification item -->
+    <string name="notif_item_title">Title :</string>
+    <string name="notif_item_text">Text :</string>
 
 </resources>
