feat(): add notification

--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -23,13 +23,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:indeterminate="true"/>
+        android:indeterminate="true"
+        android:visibility="gone"/>
     <TextView
         android:id="@+id/notification_fragment_text_loading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/login_fragment_text_loading_data"/>
+        android:text="@string/notif_fragment_text_loading"
+        android:visibility="gone"/>
     -->
 
 
@@ -48,7 +50,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_10"
         android:layout_marginLeft="@dimen/dimen_15"
-        android:layout_marginRight="@dimen/dimen_15"/>
+        android:layout_marginRight="@dimen/dimen_15"
+        android:visibility="gone"/>
+
+    <FrameLayout
+        android:id="@+id/notification_fragment_container_img"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_launcher_background"
+            android:layout_gravity="center"/>
+    </FrameLayout>
 
 
 </LinearLayout>
