--- a/app/src/main/res/values-en/string.xml
+++ b/app/src/main/res/values-en/string.xml
@@ -32,4 +32,8 @@
     <string name="notif_item_title">Title :</string>
     <string name="notif_item_text">Text :</string>
 
+    <!-- menu notification -->
+    <string name="menu_notification_sign_out">Sign out</string>
+    <string name="menu_notification_channels">Channels</string>
+
 </resources>
