--- a/app/src/main/res/values-fr/string.xml
+++ b/app/src/main/res/values-fr/string.xml
@@ -36,4 +36,7 @@
     <string name="menu_notification_sign_out">Déconnexion</string>
     <string name="menu_notification_channels">Channels</string>
 
+    <!-- not logged-->
+    <string name="login_not_logged">Vous devez vous connecter pour voir la liste des messages</string>
+
 </resources>
