--- a/app/src/main/res/layout/default_toolbar.xml
+++ b/app/src/main/res/layout/default_toolbar.xml
@@ -3,13 +3,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-    <TextView
-        android:id="@+id/toolbar_standard_title"
+    android:orientation="horizontal">
+    <ImageView
+        android:id="@+id/toolbar_standard_back_nav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/dimen_5"
+        android:src="@drawable/ic_chevron_left"/>
+    <TextView
+        android:id="@+id/toolbar_standard_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:layout_gravity="center"
         android:text="@string/app_name"
         android:textColor="@color/colorWhite"
         android:textStyle="bold|italic"
