feat(): Add string for toolbar title sign in and toppics

--- a/app/src/main/res/values-fr/string.xml
+++ b/app/src/main/res/values-fr/string.xml
@@ -24,6 +24,8 @@
     <string name="login_fragment_there_are_not_chosen">Vous devez choisir au moins un toppic</string>
     <string name="login_fragment_text_loading_data">Chargement des données à partir du server...</string>
     <string name="login_fragment_text_google_sign_in">Connexion à Google</string>
+    <string name="login_fragment_title_toppics">Toppics</string>
+    <string name="login_fragment_title_sign_in">Connexion</string>
 
     <!-- notification -->
     <string name="notif_fragment_text_loading">Chargement des messages...</string>
