--- a/app/src/main/res/values-en/string.xml
+++ b/app/src/main/res/values-en/string.xml
@@ -24,6 +24,8 @@
     <string name="login_fragment_there_are_not_chosen">You have to choose a channel</string>
     <string name="login_fragment_text_loading_data">Loading data from server...</string>
     <string name="login_fragment_text_google_sign_in">Sign in with Google</string>
+    <string name="login_fragment_title_toppics">Toppics</string>
+    <string name="login_fragment_title_sign_in">Sign in</string>
 
     <!-- notification -->
     <string name="notif_fragment_text_loading">Loading messages...</string>
