--- a/app/src/main/res/values-en/string.xml
+++ b/app/src/main/res/values-en/string.xml
@@ -36,7 +36,7 @@
 
     <!-- menu notification -->
     <string name="menu_notification_sign_out">Sign out</string>
-    <string name="menu_notification_channels">Channels</string>
+    <string name="menu_notification_channels">My toppics</string>
 
     <!-- not logged-->
     <string name="login_not_logged">You have to log in to see topics</string>
