--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:elevation="@dimen/dimen_4"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:theme="@style/WhiteOverflowIcon"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
         <include layout="@layout/default_toolbar" />
