--- a/app/src/main/res/layout/notification_item_message.xml
+++ b/app/src/main/res/layout/notification_item_message.xml
@@ -37,6 +37,28 @@
 
     <!-- second line -->
     <LinearLayout
+        android:id="@+id/notification_item_layout_topic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/dimen_10"
+        android:layout_marginLeft="@dimen/dimen_10"
+        android:layout_marginRight="@dimen/dimen_10">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/notif_item_topic"
+            android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/notification_item_topic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dimen_3"
+            android:text="title here"/>
+    </LinearLayout>
+
+    <!-- third line -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -56,7 +78,7 @@
             android:text="title here"/>
     </LinearLayout>
 
-    <!-- third line -->
+    <!-- fourth line -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
