feat(): add menu to add the url to get topics

--- a/app/src/main/res/values-en/string.xml
+++ b/app/src/main/res/values-en/string.xml
@@ -38,6 +38,7 @@
     <!-- menu notification -->
     <string name="menu_notification_sign_out">Sign out</string>
     <string name="menu_notification_channels">My topics</string>
+    <string name="menu_notification_channels_url">Manage my URL</string>
 
     <!-- not logged-->
     <string name="login_not_logged">You have to log in to see topics</string>
