--- a/app/src/main/res/values-fr/string.xml
+++ b/app/src/main/res/values-fr/string.xml
@@ -38,6 +38,7 @@
     <!-- menu notification -->
     <string name="menu_notification_sign_out">Déconnexion</string>
     <string name="menu_notification_channels">Mes topics</string>
+    <string name="menu_notification_channels_url">Gérer mon URL</string>
 
     <!-- not logged-->
     <string name="login_not_logged">Vous devez vous connecter pour voir la liste des messages</string>
