--- a/app/src/main/res/menu/menu_notification.xml
+++ b/app/src/main/res/menu/menu_notification.xml
@@ -7,6 +7,10 @@
         android:icon="@drawable/ic_list_channels"
         android:title="@string/menu_notification_channels" />
     <item
+        android:id="@+id/menu_notif_manage_topic_url"
+        android:icon="@drawable/ic_edit_24dp"
+        android:title="@string/menu_notification_channels_url" />
+    <item
         android:id="@+id/menu_notif_sign_out"
         android:icon="@drawable/ic_account_circle"
         android:title="@string/menu_notification_sign_out" />
