--- a/app/src/main/res/layout/fragment_add_topic_url_fragment.xml
+++ b/app/src/main/res/layout/fragment_add_topic_url_fragment.xml
@@ -17,4 +17,12 @@
 
     </android.support.v7.widget.Toolbar>
 
+    <LinearLayout
+        android:id="@+id/add_topic_url_linear_layout_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+    </LinearLayout>
+
 </LinearLayout>
