--- a/app/src/main/res/values-fr/string.xml
+++ b/app/src/main/res/values-fr/string.xml
@@ -36,7 +36,11 @@
     <string name="notif_item_text">Texte :</string>
 
     <!-- add topic URL -->
-    <string name="add_opic_url_view_title">Gérer mon URL</string>
+    <string name="add_topic_url_view_title">Gérer mon URL</string>
+    <string name="add_topic_url_current_url_text">Mon url</string>
+    <string name="add_topic_url_current_url_save_new_url">Enregistrer</string>
+    <string name="add_topic_url_current_url_replace_url">Remplacer</string>
+    <string name="add_topic_url_current_url_text_url">URL</string>
 
     <!-- menu notification -->
     <string name="menu_notification_sign_out">Déconnexion</string>
