--- a/app/src/main/res/values-en/string.xml
+++ b/app/src/main/res/values-en/string.xml
@@ -37,10 +37,14 @@
 
     <!-- add topic URL -->
     <string name="add_topic_url_view_title">Manage my URL</string>
-    <string name="add_topic_url_current_url_text">My current url</string>
-    <string name="add_topic_url_current_url_save_new_url">Save</string>
-    <string name="add_topic_url_current_url_replace_url">Replace</string>
-    <string name="add_topic_url_current_url_text_url">URL</string>
+    <string name="add_topic_url_current_url_text">Current URL</string>
+    <string name="add_topic_url_current_url_save_new_url_btn">Save</string>
+    <string name="add_topic_url_current_url_replace_url_btn">Replace</string>
+    <string name="add_topic_url_current_url_text_url">NEW :</string>
+    <string name="add_topic_url_error_message_not_valid">UNVALID !</string>
+
+    <!-- Topic -->
+    <string name="topic_view_title">My topics</string>
 
     <!-- menu notification -->
     <string name="menu_notification_sign_out">Sign out</string>
