--- a/app/src/main/res/values-en/string.xml
+++ b/app/src/main/res/values-en/string.xml
@@ -37,10 +37,11 @@
 
     <!-- add topic URL -->
     <string name="add_topic_url_view_title">Manage my URL</string>
-    <string name="add_topic_url_current_url_text">Current URL</string>
+    <string name="add_topic_url_current_url_text">CURRENT URL</string>
     <string name="add_topic_url_current_url_save_new_url_btn">Save</string>
     <string name="add_topic_url_current_url_replace_url_btn">Replace</string>
-    <string name="add_topic_url_current_url_text_url">NEW :</string>
+    <string name="add_topic_url_current_url_text_url">NEW </string>
+    <string name="add_topic_url_current_url_hint">"https://mytopicurl.com/api/topics</string>
     <string name="add_topic_url_error_message_not_valid">UNVALID !</string>
 
     <!-- Topic -->
