--- a/app/src/main/res/values-fr/string.xml
+++ b/app/src/main/res/values-fr/string.xml
@@ -30,6 +30,8 @@
     <!-- notification -->
     <string name="notif_fragment_text_loading">Chargement des messages...</string>
     <string name="notif_fragment_title_view">Notifications</string>
+    <string name="notif_fragment_delete_success">Notification supprimée avec succès!</string>
+    <string name="notif_fragment_delete_error">Nous ne pouvons pas supprimer la notification!</string>
     <!-- notification item -->
     <string name="notif_item_topic">Topic :</string>
     <string name="notif_item_title">Titre :</string>
