refactro(): add id and margin

--- a/app/src/main/res/layout/fragment_add_topic_url_fragment.xml
+++ b/app/src/main/res/layout/fragment_add_topic_url_fragment.xml
@@ -64,6 +64,7 @@
                     android:id="@+id/add_topic_url_fragment_edit_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:maxLines="1"
                     android:hint="@string/add_topic_url_current_url_hint"/>
             </LinearLayout>
             <TextView
