--- a/app/src/main/res/values-en/string.xml
+++ b/app/src/main/res/values-en/string.xml
@@ -45,9 +45,12 @@
     <string name="add_topic_url_current_url_text_url">NEW </string>
     <string name="add_topic_url_current_url_hint">"https://mytopicurl.com/api/topics</string>
     <string name="add_topic_url_error_message_not_valid">UNVALID !</string>
+    <string name="add_topic_url_empty_url">This field can\'t be empty!</string>
 
     <!-- Topic -->
     <string name="topic_view_title">My topics</string>
+    <string name="topic_view_bad_url">We can\'t get the list of topics !</string>
+    <string name="add_topic_url_copy_current_url">Copy URL</string>
 
     <!-- menu notification -->
     <string name="menu_notification_sign_out">Sign out</string>
