--- a/app/src/main/res/values-en/string.xml
+++ b/app/src/main/res/values-en/string.xml
@@ -40,10 +40,12 @@
     <!-- add topic URL -->
     <string name="add_topic_url_view_title">Manage my URL</string>
     <string name="add_topic_url_current_url_text">CURRENT URL</string>
+    <string name="add_topic_url_api_key_text">MY API KEY</string>
     <string name="add_topic_url_current_url_save_new_url_btn">Save</string>
     <string name="add_topic_url_current_url_replace_url_btn">Replace</string>
     <string name="add_topic_url_current_url_text_url">NEW </string>
-    <string name="add_topic_url_current_url_hint">"https://mytopicurl.com/api/topics</string>
+    <string name="add_topic_url_current_url_hint">https://mytopicurl.com/api/topics</string>
+    <string name="add_topic_url_api_key_hint">45855JKHKJJlk,</string>
     <string name="add_topic_url_error_message_not_valid">UNVALID !</string>
     <string name="add_topic_url_empty_url">This field can\'t be empty!</string>
 
